<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#fffffa"
    android:id="@+id/coordinator"
    android:layout_width="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/black"
            app:title="Shopping List"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:descendantFocusability="blocksDescendants"
            android:id="@+id/products_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/showCart"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basketButton"
            android:src="@drawable/ic_shopping_basket"
            android:tint="@android:color/white"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="5dp"
            android:layout_marginBottom="30dp"
            android:elevation="50dp"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/cart_size"
            android:textSize="13sp"
            android:background="@drawable/item_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/basketButton" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>