<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cartId"
    android:layout_width="match_parent"
    android:background="#fffffdff"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/material_dynamic_primary20"
            app:title="Shopping Cart"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/shopping_cart_recyclerView"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RelativeLayout
        android:padding="8dp"
        app:elevation="4dp"
        android:layout_gravity="bottom"
        android:elevation="15dp"
        android:background="@color/material_dynamic_primary0"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        tools:targetApi="lollipop">


        <LinearLayout
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlCompat">

            <TextView
                android:id="@+id/totalLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginStart="18dp"
                android:id="@+id/total_price"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat"/>

        </LinearLayout>


        <Button
            android:textSize="19sp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:text="Checkout"
            android:textAllCaps="false"
            android:background="@drawable/round_background"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>